# pico-arduino

./: ArduinoSketch.cmake  ArduinoSketchLib.cmake  CMakeLists.txt  Doxyfile  README.md  Redefines.md  history.md
Arduino/: CMakeLists.txt  Doxyfile  License.txt
Arduino/ArduinoCore-API/: README.md
Arduino/ArduinoCore-API/.github/workflows/: unit-tests.yml
Arduino/ArduinoCore-API/api/: ArduinoAPI.h  HardwareI2C.h  IPAddress.cpp  IPAddress.h  Print.h  RingBufferN.h  Stream.cpp  WString.cpp  WString.h
Arduino/ArduinoCore-API/test/: CMakeLists.txt
Arduino/ArduinoCore-API/test/include/: MillisFake.h  PrintMock.h  PrintableMock.h  StreamMock.h
Arduino/ArduinoCore-API/test/src/: MillisFake.cpp  PrintMock.cpp  StreamMock.cpp  dtostrf.cpp  itoa.cpp  main.cpp
Arduino/ArduinoCore-Pico/: Arduino.cpp  Arduino.h  Map.h  PicoDMA.h  PicoGPIOFunction.h  PicoHardwareI2C.h  PicoHardwareSPI.h  PicoHardwareSerial.h  PicoLogger.h  PicoMulticoreFifo.h  PicoPIOManager.h  PicoPWM.h  PicoPWMServo.h  PicoPinFunction.h  PicoQueue.h  PicoSemaphore.h  PicoStreamPrintf.h  PicoThread.h  PicoTimer.h  PicoTone.h  PicoUSB.h  README.md  SPI.h  Servo.h  SoftwareSerial.h  Vector.h  Wire.h  pgmspace.h  pins_arduino.h
Arduino/ArduinoCore-Pico/avr/: pgmspace.h  wdt.h
Arduino/ArduinoCore-Pico/cores/pico/: Arduino.cpp  Arduino.h  Map.h  PicoGPIOFunction.h  PicoHardwareI2C.h  PicoHardwareSPI.h  PicoHardwareSerial.h  PicoLogger.h  PicoMulticoreFifo.h  PicoPIOManager.h  PicoQueue.h  PicoSemaphore.h  PicoThread.h  PicoTimer.h  PicoTone.h  SPI.h  SoftwareSerial.h  Vector.h  Wire.h  main.cpp  pgmspace.h  pins_arduino.h
Arduino/AudioTools/: AnalogSampler.hpp  AudioAAC.h  AudioTools.h  Notes.h
Arduino/I2S/: i2s_slave.pio
Arduino/SoftwareSerial/: CMakeLists.txt  PicoSoftwareSerial.h  README.md  SoftwareSerial.h  pio_uart_rx.h  pio_uart_rx.pio  pio_uart_tx.h  pio_uart_tx.pio
Arduino/Tools/: Buffers.h  Map.h  README.md  SerialDAC.h
Arduino/USB/: USBAudio.h  dev_audio_headset_cb.cpp
Arduino/USB/audio/: USB.h  usb_main.cpp
Arduino/USB/midi/: USB.h  usb_main.cpp
examples/: CMakeLists.txt  README.md
examples/analog_read/: CMakeLists.txt  README.md  analog_read.cpp
examples/audio_i2s_test/: CMakeLists.txt  README.md  i2s_test.cpp
examples/audio_pwm/: CMakeLists.txt  README.md  audio_pwm.cpp
examples/blink/: CMakeLists.txt  README.md  blink.cpp
examples/blink_timer/: CMakeLists.txt  README.md  blink_timer.cpp
examples/codedronediy/: CMakeLists.txt  MotorsSpeedControl.cpp  README.md
examples/codedronediy/cmake/: GitUtils.cmake  Utils.cmake
examples/esp01/: CMakeLists.txt  README.md  webserver.cpp
examples/esp01/wifiesp-lib/: README.md
examples/example_with_arduino_library/: CMakeLists.txt  README.md  example_with_arduino_library.cpp
examples/hallo_dma/: CMakeLists.txt  README.md  hallo_dma.cpp
examples/hallo_world/: CMakeLists.txt  README.md  hallo_world.cpp
examples/hallo_world_ext/: CMakeLists.txt  README.md
examples/hallo_world_printf/: CMakeLists.txt  README.md  hallo_world_printf.cpp
examples/hallo_world_serial/: CMakeLists.txt  README.md  hallo_world_serial.cpp
examples/hallo_world_serial_define_pins/: CMakeLists.txt  README.md  hallo_world_serial.cpp
examples/hc_05/: CMakeLists.txt  README.md  hc_05.cpp
examples/i2c_hw290/: CMakeLists.txt  README.md  i2c_hw290.cpp
examples/i2s/: i2s.cpp
examples/logic_analyzer/: CMakeLists.txt  README.md
examples/loopback_i2c/: CMakeLists.txt
examples/loopback_i2s/: loopback_i2s.cpp
examples/microphone/: microphone_usb.cpp
examples/multi_processor/: CMakeLists.txt  README.md  multi_processor.cpp
examples/multi_processor_fifo/: CMakeLists.txt  README.md  multi_processor_fifo.cpp
examples/multi_processor_with_volatile/: CMakeLists.txt  README.md  volatile.cpp
examples/pin_interrupt/: CMakeLists.txt  README.md  pin_interrupt.cpp
examples/pwm_arduino/: CMakeLists.txt  README.md  pwm.cpp  pwm_arduino.cpp
examples/pwm_arduino_read/: CMakeLists.txt  README.md
examples/pwm_pico/: CMakeLists.txt  README.md  pwm.cpp
examples/pwm_pico_read/: CMakeLists.txt  README.md  pwm_pico_read.cpp
examples/pwm_read/: README.md  pwm_arduino_read.cpp
examples/pwm_servo/: CMakeLists.txt  README.md  servo_sweep.cpp
examples/queue/: CMakeLists.txt  README.md  queue.cpp
examples/sd_bench/: CMakeLists.txt  README.md  sd_bench.cpp
examples/sd_info/: CMakeLists.txt  README.md  sd_info.cpp
examples/sd_read_csv/: CMakeLists.txt  README.md  sd_read_csv.cpp
examples/semaphore/: CMakeLists.txt  README.md  semaphore.cpp
examples/software_serial/: CMakeLists.txt  README.md  software_serial.cpp
examples/strings/: CMakeLists.txt  README.md  strings.cpp
examples/temperature_sensor/: CMakeLists.txt  README.md  temperature_sensor.cpp
examples/tensorflow_micro/: CMakeLists.txt  README.md  tf_hallo_world.cpp  tf_hallo_world_model.h  utility.h
examples/tone_melody/: CMakeLists.txt  README.md  tone_melody.cpp
examples/usb_audio/: CMakeLists.txt  USB.h  demo_usb_audio.cpp  tusb_config.h  usb_audio.cpp  usb_main.cpp
examples/usb_combined/: CMakeLists.txt  main.cpp  tusb_config.h
examples/usb_combined/bak/: tusb_config.h  usb_descriptors.c
examples/usb_descriptor/: CMakeLists.txt  usb_midi.cpp
examples/usb_dev_audio/: CMakeLists.txt  usb_dev_audio.cpp
examples/usb_midi/: CMakeLists.txt  README.md  USBMidi.h  usb_main.cpp  usb_midi.cpp
examples/usb_midi1/: CMakeLists.txt  USB.h  usb_main.cpp  usb_midi.cpp
examples/use_as_library/: CMakeLists.txt  README.md  use_as_library.cpp
examples/using_arduino_library/: CMakeLists.txt  README.md
examples/watchdog/: CMakeLists.txt  README.md  watchdog.cpp
sandbox/: README.md
sandbox/LiquidCrystal_I2C/: CMakeLists.txt  hallo_world.cpp
sandbox/audio_mp3_player/: CMakeLists.txt  mp3_player.cpp
sandbox/mic_to_sd/: Buffers.h  CMakeLists.txt  README.md  mic.cpp  mic_to_sd.cpp  mic_to_serial.cpp
sandbox/mozzi/: CMakeLists.txt  README.md  sine_wave.cpp
sandbox/print_error/: CMakeLists.txt
sandbox/sd_info/: CMakeLists.txt  SdFormatter.cpp  bench.cpp  readme.md  sd_info.cpp
(+471 files in other folders)
